fixed caret being cutoff =

--- a/frontend/src/styles/test.scss
+++ b/frontend/src/styles/test.scss
@@ -135,7 +135,7 @@
   align-content: flex-start;
   user-select: none;
   padding-bottom: 1em;
-  margin-top: 0.25em;
+  padding-top: 0.25em;
 
   .newline {
     width: inherit;
